# counterparty-concentration-lens

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  mutation.yml
capstone/: .coverage  README.md  requirements.txt  run_spark.sh  spark_loader.py
capstone/lens_capstone/: __init__.py  triples_map.py
capstone/tests/: conftest.py  test_triples_map.py
docs/: architecture.md  ccr-coverage.md  ccr-demo-guide.md  compliance-and-data-governance.md  concentration-metrics.md  data-import.md  engineering-practices.md  fibo-notes.md  golden-path.md  lab-handbook.md  oss-stack-mapping.md  running-the-lens.md  threat-model.md
docs/adr/: 0000-template.md  0001-fibo-as-semantic-model.md  0002-opa-rego-for-authorization.md  0003-tamper-evident-audit-log.md  0004-csv-import-validate-all-then-load.md  README.md
docs/img/: capture.py  make_social.py
m0-ontology/: .coverage  README.md  requirements.txt
m0-ontology/data/: instances.ttl
m0-ontology/lens_m0/: __init__.py  concentration.py  config.py  fuseki.py  graph.py  metrics_queries.py  queries.py
m0-ontology/ontology/: lens.ttl
m0-ontology/queries/: concentration_breakdown.rq  connected_exposure_by_owner.rq  country_concentration.rq  cr10.rq  direct_vs_connected.rq  hhi.rq  nbfi_cascade.rq  rating_concentration.rq  sector_concentration.rq  ubo_aggregation.rq  watchlist.rq  wrong_way_risk.rq
m0-ontology/scripts/: load_data.py  run_money_shot.py  show_concentration.py  start_fuseki.sh
m0-ontology/tests/: conftest.py  test_cli_m0.py  test_concentration.py  test_data.py  test_fuseki_integration.py  test_metrics_queries.py  test_ontology.py
m1-ingestion/: .coverage  .mutmut-cache  README.md  requirements.txt
m1-ingestion/data/: README.md
m1-ingestion/data/calm/: collateral.csv  guarantees.csv  limits.csv  loans.csv
m1-ingestion/data/stressed/: collateral.csv  entities.csv  guarantees.csv  loans.csv
m1-ingestion/lens_m1/: __init__.py  byod.py  config.py  contagion.py  credit_risk.py  csv_tables.py  datasets.py  ifrs9.py  loader.py  macro.py  metrics.py  rdfize.py  reverse_stress.py  scenarios.py  spec.py  xva.py
m1-ingestion/scripts/: generate_data.py  load_data.py  show_metrics.py
m1-ingestion/tests/: conftest.py  test_byod.py  test_cli_m1.py  test_contagion.py  test_country_rating.py  test_credit_risk.py  test_csv_and_rdf.py  test_datasets.py  test_ifrs9.py  test_load_integration.py  test_macro.py  test_metrics.py  test_netting.py  test_properties.py  test_reverse_stress.py  test_scenarios.py  test_xva.py
m2-actions/: .coverage  README.md  requirements.txt
m2-actions/lens_m2/: __init__.py  actions.py  app.py  audit.py  config.py  derived.py  graphbuild.py  importer.py  maker_checker.py  models.py  obs.py  predeal.py  store.py  validation.py
m2-actions/lens_m2/shapes/: lens_shapes.ttl
m2-actions/scripts/: serve.py
m2-actions/tests/: conftest.py  test_actions.py  test_api.py  test_audit.py  test_byod_country_rating.py  test_byod_credit_risk.py  test_byod_netting.py  test_credit_risk_derived.py  test_importer.py  test_maker_checker.py  test_netting_derived.py  test_openapi_contract.py  test_predeal.py  test_shapes.py  test_store_errors.py  test_validation.py
m3-security/: .coverage  README.md  requirements.txt
m3-security/lens_m3/: __init__.py  policy.py  portfolios.py
m3-security/policies/: authz.rego  authz_test.rego
m3-security/tests/: test_policy.py  test_policy_unavailable.py
m4-ai/: .coverage  .mutmut-cache  README.md  requirements.txt
m4-ai/lens_m4/: __init__.py  agent.py  nl2sparql.py  ollama.py  safety.py
m4-ai/tests/: conftest.py  test_agent.py  test_agent_ollama.py  test_safety.py
m5-app/: .coverage  README.md  requirements.txt  streamlit_app.py
m5-app/lens_m5/: __init__.py  bootstrap.py  data.py
m5-app/tests/: conftest.py  test_app_smoke.py  test_views.py
m6-infra/: README.md  setup.sh
m6-infra/argocd/: application.yaml  policies-application.yaml
m6-infra/docker/: agent.Dockerfile  agent_service.py  api.Dockerfile  app.Dockerfile
m6-infra/examples/: bad-privileged-pod.yaml
m6-infra/k3d/: cluster.yaml
m6-infra/k8s/: 00-namespace.yaml  10-fuseki.yaml  20-api.yaml  30-agent.yaml  40-app.yaml  kustomization.yaml
m6-infra/policies/: kustomization.yaml
m6-infra/policies/constraints/: allowed-repos.yaml  disallow-privileged.yaml  require-resource-limits.yaml  required-labels.yaml
m6-infra/policies/templates/: allowed-repos.yaml  disallow-privileged.yaml  require-resource-limits.yaml  required-labels.yaml
m6-infra/policies/tests/: _wrong_suite.yaml  suite.yaml
m6-infra/policies/tests/cases/: bad-repo-pod.yaml  compliant-pod.yaml  no-label-pod.yaml  no-limits-pod.yaml  privileged-pod.yaml
m6-infra/tests/: test_manifests.py
scripts/: run_mutation.sh
templates/: README.md  collateral.csv  entities.csv  guarantees.csv  limits.csv  loans.csv  mapping.example.yaml
tests/: conftest.py  test_api_integration.py  test_app_interaction.py  test_byod_integration.py  test_e2e_flow.py  test_fuseki_store_integration.py  test_performance.py
