# Project tooling configuration for the Counterparty Concentration Lens.
# Centralises ruff, black, mypy, bandit, and pytest settings so local
# pre-commit hooks and CI behave identically.

[project]
name = "counterparty-concentration-lens"
version = "0.1.0"
description = "Learning prototype: standards-based (FIBO) counterparty concentration view. Synthetic data; production-shaped, not production-hardened."
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Sensible default rule set; expand as the codebase grows.
select = ["E", "F", "I", "B", "UP", "S"]  # incl. flake8-bandit (S) basics
# S101 (assert) is fine in tests; refine per-path if needed.
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]   # allow asserts in tests

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
# Let `mypy .` resolve each module's package (lens_m0, lens_m1, scripts) by directory.
explicit_package_bases = true
mypy_path = "m0-ontology:m1-ingestion:m2-actions:m3-security:m4-ai:m5-app:capstone"
# Don't type-check the virtualenv, vendored ontology, or server runtime dirs.
# `scripts/` and `tests/` are excluded from the aggregate run: each module has a
# same-named `scripts`/`tests` package (and a `conftest.py`) that mypy cannot
# disambiguate in one invocation. The typed logic lives in the lens_* packages,
# which ARE checked; tests still run under pytest.
exclude = '(^|/)(\.venv|vendor|run|scripts|tests)/|\.fuseki/'
# Tighten over time, e.g. disallow_untyped_defs = true per module.

# Don't analyse heavy third-party stubs (numpy ships 3.12-syntax stubs that
# trip mypy under python_version 3.11). Their types degrade to Any, which is
# fine for the M5 UI layer.
[[tool.mypy.overrides]]
module = ["numpy.*", "pandas.*", "streamlit.*", "pyarrow.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.bandit]
# Bandit reads this section (via bandit[toml]).
exclude_dirs = ["tests", ".venv", "vendor"]
# B101 = assert_used; skipped because asserts are used in tests.
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["m0-ontology", "m1-ingestion", "m2-actions", "m3-security", "m4-ai", "m5-app"]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "integration: tests that need a live Fuseki server (skipped if unreachable)",
]
# Silence third-party (pyparsing via rdflib) deprecation noise; keep our own.
filterwarnings = [
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore::DeprecationWarning:rdflib.*",
    "ignore::DeprecationWarning:starlette.*",
]
